mise en place  hover sur les boutton

--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -77,3 +77,10 @@
         animation: appearance 2000ms 550ms backwards;
     }
 }
+// Animation sur les boutons
+.button:hover{
+    background: linear-gradient(200.64deg, #9356DC -70.2%, #FF79DA 110.74%), linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
+    box-shadow: 0px 4px 15px 0px #00000059;
+}
+
+
