--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -484,4 +484,9 @@ body {
   animation: appearance 2000ms 550ms backwards;
 }
 
+.button:hover {
+  background: linear-gradient(200.64deg, #9356DC -70.2%, #FF79DA 110.74%), linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
+}
+
 /*# sourceMappingURL=styles.css.map */
