--- a/site_production/sass/button.scss
+++ b/site_production/sass/button.scss
@@ -1,5 +1,5 @@
 .button{
-    background: linear-gradient(#FF79DA, #9356DC);
+    background-image: linear-gradient(#FF79DA, #9356DC);
     display: flex;
     text-decoration: none;
     width: auto;
