--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -79,10 +79,9 @@
 }
 // Animation sur les boutons
 .button{
-    transition-property: transition;
-    transition-duration: 3000ms;
+    transition: background-image 2000ms ease, box-shadow 2000ms ease;
     &:hover{
-        background: linear-gradient(200.64deg, #9356DC -70.2%, #FF79DA 110.74%), linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
+        background-image: linear-gradient(200.64deg, #9356DC -70.2%, #FF79DA 110.74%), linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
         box-shadow: 0px 4px 15px 0px #00000059;
     }
 }
