--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -257,30 +257,48 @@ body{
             }
         }
         .menu__cards{
+            display: flex;
+            flex-direction: row;
             width: 80%;
             border: none;
             border-radius: 15px;
             box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px $cd-shadow--secondary;
-            padding: 10px;
             margin-bottom: 10px;
-            &__title{
-                padding-bottom: 5px;
+            
+            &__description{
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                padding: 10px 0px 10px 10px;
                 & h3{
                     margin: 0px;
                 }
-            }
-            &__txt__price{
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
                 & p{
                     margin: 0px;
                 }
-                & .bold{
-                    font-weight: bold;
-                    padding: 0px 10px 5px 0px;
+            }
+            &__price{
+                display: flex;
+                align-items: flex-end;
+                padding-bottom: 10px;
+                padding-right: 10px;
+                & p{
+                    margin: 0px;
                 }
             }
+            &__check{
+                background-color: #99E2D0;
+                width: 50px;
+                height: 60px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 0px 15px 15px 0px;
+                & i{
+                    color: white;
+                }
+                }
+            
         }
         &__button{
             display: flex;
