--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -14,7 +14,7 @@ body{
             display: flex;
             justify-content: center;
         }
-        & h2{
+        & h1{
             width: 75%;
             text-align: center;
             margin: 0px;
@@ -223,7 +223,7 @@ body{
             display: flex;
             align-items: center;
             justify-content: space-between;
-            & h2{
+            & h1{
                 font-size: 28px;
                 font-family: "shrikhand", sans-serif;
                 font-style: italic;
@@ -259,7 +259,7 @@ body{
         .menu__cards{
             display: flex;
             flex-direction: row;
-            width: 80%;
+            width: 90%;
             border: none;
             border-radius: 15px;
             box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px $cd-shadow--secondary;
@@ -269,12 +269,19 @@ body{
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                padding: 10px 0px 10px 10px;
+                padding: 10px 0px 8px 10px;
+                justify-content: space-around;
+                white-space: nowrap;
                 & h3{
                     margin: 0px;
+                    padding-bottom: 5px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
                 & p{
                     margin: 0px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
             &__price{
@@ -284,12 +291,13 @@ body{
                 padding-right: 10px;
                 & p{
                     margin: 0px;
+                    font-weight: bold;
                 }
             }
             &__check{
                 background-color: #99E2D0;
-                width: 50px;
-                height: 60px;
+                width: 65px;
+                height: 63px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
