Mise a jour et finalisation des boutons du site, test sur transition check mais rien a faire a revoir

--- a/site_production/sass/button.scss
+++ b/site_production/sass/button.scss
@@ -1,5 +1,6 @@
 .button{
-    background-image: linear-gradient(#FF79DA, #9356DC);
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    box-shadow: 0px 4px 10px 0px #00000040;
     display: flex;
     text-decoration: none;
     width: auto;
