--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -80,7 +80,8 @@ body {
     justify-content: center;
   }
   .reservation__button .button {
-    background-image: linear-gradient(#FF79DA, #9356DC);
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
     display: flex;
     text-decoration: none;
     width: auto;
@@ -362,7 +363,8 @@ body {
     padding: 30px 0px 42px 0px;
   }
   .container__button .button {
-    background-image: linear-gradient(#FF79DA, #9356DC);
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
     display: flex;
     text-decoration: none;
     width: auto;
