--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -323,6 +323,8 @@ body {
     padding: 10px 0px 8px 10px;
     justify-content: space-around;
     white-space: nowrap;
+    flex: 1;
+    min-width: 0;
   }
   .container .menu__cards__description h3 {
     margin: 0px;
@@ -339,7 +341,7 @@ body {
     display: flex;
     align-items: flex-end;
     padding-bottom: 10px;
-    padding-right: 10px;
+    padding-right: 15px;
   }
   .container .menu__cards__price p {
     margin: 0px;
@@ -347,7 +349,7 @@ body {
   }
   .container .menu__cards__check {
     background-color: #99E2D0;
-    width: 65px;
+    width: 0px;
     height: 63px;
     display: flex;
     align-items: center;
@@ -356,6 +358,7 @@ body {
   }
   .container .menu__cards__check i {
     color: white;
+    font-size: 0;
   }
   .container__button {
     display: flex;
