--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -140,5 +140,18 @@
 // Animation pour commande de plat
 
 
+.menu__cards {
+    i {
+        max-width: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        transition: max-width 1000ms ease;
+    }
+}
+
+.menu__cards:active i{
+    max-width: 100%;
+    transition: max-width 1000ms ease;
+}
 
 
