--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -311,63 +311,39 @@ body {
     width: 90%;
     display: flex;
     justify-content: center;
-    text-decoration: none;
-    color: black;
+    box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
+    border-radius: 15px;
+    overflow: hidden;
   }
   .container .container__menu .menu__cards {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
-    margin-bottom: 10px;
-  }
-  .container .container__menu .menu__cards__description {
-    display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 10px 0px 8px 10px;
-    justify-content: space-around;
+    cursor: pointer;
+    padding: 10px 10px 10px 15px;
     white-space: nowrap;
     flex: 1;
     min-width: 0;
   }
-  .container .container__menu .menu__cards__description h3 {
-    margin: 0px;
-    padding-bottom: 5px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .container .container__menu .menu__cards__description p {
+  .container .container__menu .menu__cards h3 {
     margin: 0px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
   .container .container__menu .menu__cards__price {
     display: flex;
+    justify-content: space-between;
     align-items: flex-end;
-    padding-bottom: 10px;
-    padding-right: 15px;
+    padding: 10px 10px 0px 0px;
   }
   .container .container__menu .menu__cards__price p {
     margin: 0px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .container .container__menu .menu__cards__price .bold {
+    margin: 0px;
     font-weight: bold;
-  }
-  .container .container__menu .menu__cards__check {
-    display: flex;
-    justify-content: flex-end;
-  }
-  .container .container__menu .menu__cards__check i {
-    color: white;
-    font-size: 20px;
-    width: 60px;
-    height: 63px;
-    border-radius: 0px 15px 15px 0px;
-    background-color: #99E2D0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
   .container__button {
     display: flex;
@@ -588,16 +564,24 @@ body {
   opacity: 1;
 }
 
-.menu__cards i {
-  max-width: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  transition: max-width 1000ms ease;
+.container__menu input[type=checkbox] {
+  display: none;
 }
-
-.menu__cards:active i {
-  max-width: 100%;
-  transition: max-width 1000ms ease;
+.container__menu i {
+  width: 0;
+  display: none;
+}
+.container__menu input[type=checkbox]:checked + i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  height: auto;
+  background: #99E2D0;
+  color: white;
+}
+input[type=checkbox]:checked + .container__menu .menu__cards {
+  width: 80%;
 }
 
 /*# sourceMappingURL=styles.css.map */
