--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -260,77 +260,50 @@ body{
             width: 90%;
             display: flex;
             justify-content: center;
-            text-decoration: none;
-            color: black;
-        
+            box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px $cd-shadow--secondary;
+            border-radius: 15px;
+            overflow: hidden;
             .menu__cards{
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 width: 100%;
-                border: none;
-                border-radius: 15px;
-                box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px $cd-shadow--secondary;
-                margin-bottom: 10px;
-                
-                &__description{
-                    display: flex;
-                    flex-direction: column;
-                    width: 100%;
-                    padding: 10px 0px 8px 10px;
-                    justify-content: space-around;
-                    white-space: nowrap;
-                    flex: 1;
-                    min-width: 0;
-                    & h3{
-                        margin: 0px;
-                        padding-bottom: 5px;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                    & p{
-                        margin: 0px;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
+                cursor: pointer;
+                padding: 10px 10px 10px 15px;
+                white-space: nowrap;
+                flex: 1;
+                min-width: 0;
+                & h3{
+                    margin: 0px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
                 &__price{
                     display: flex;
+                    justify-content: space-between;
                     align-items: flex-end;
-                    padding-bottom: 10px;
-                    padding-right: 15px;
+                    padding: 10px 10px 0px 0px;
                     & p{
+                        margin: 0px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
+                    & .bold{
                         margin: 0px;
                         font-weight: bold;
                     }
                 }
-                &__check{
-                    display: flex;
-                    justify-content: flex-end;
-                    & i{
-                        color: white;
-                        font-size: 20px;
-                       // max-width: 60px;
-                        width: 60px;
-                        height: 63px;
-                        border-radius: 0px 15px 15px 0px;
-                        background-color: #99E2D0;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
-                }
                 
             }
         }
-        &__button{
-            display: flex;
-            justify-content: center;
-            padding: 30px 0px 42px 0px;
-            @import "./button.scss";
-            & p{
-                padding: 0px 40px 0px 40px;
-            }
+    &__button{
+        display: flex;
+        justify-content: center;
+        padding: 30px 0px 42px 0px;
+        @import "./button.scss";
+        & p{
+            padding: 0px 40px 0px 40px;
         }
+    }
     }
     
 }
