--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -314,8 +314,9 @@ body {
     box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
     border-radius: 15px;
     overflow: hidden;
+    margin-bottom: 15px;
   }
-  .container .container__menu .menu__cards {
+  .container .container__menu__cards {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -325,23 +326,23 @@ body {
     flex: 1;
     min-width: 0;
   }
-  .container .container__menu .menu__cards h3 {
+  .container .container__menu__cards h3 {
     margin: 0px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  .container .container__menu .menu__cards__price {
+  .container .container__menu__cards__price {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     padding: 10px 10px 0px 0px;
   }
-  .container .container__menu .menu__cards__price p {
+  .container .container__menu__cards__price p {
     margin: 0px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  .container .container__menu .menu__cards__price .bold {
+  .container .container__menu__cards__price .bold {
     margin: 0px;
     font-weight: bold;
   }
@@ -568,19 +569,26 @@ body {
   display: none;
 }
 .container__menu i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 0;
   width: 0;
-  display: none;
+  overflow: hidden;
+  transition: all 600ms ease-out;
 }
 .container__menu input[type=checkbox]:checked + i {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 20%;
+  width: 60px;
+  font-size: 20px;
   height: auto;
   background: #99E2D0;
   color: white;
 }
-input[type=checkbox]:checked + .container__menu .menu__cards {
+input[type=checkbox]:checked + .container__menu__cards {
   width: 80%;
 }
 
