--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -592,4 +592,35 @@ input[type=checkbox]:checked + .container__menu__cards {
   width: 80%;
 }
 
+.heart__container .heart__checkbox {
+  display: none;
+}
+.heart__container .heart {
+  position: relative;
+  font-size: 20px;
+  cursor: pointer;
+  overflow: hidden;
+  width: 25px;
+}
+.heart__container .heart .heart-filled {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.heart__container .heart .heart-filled.gradient {
+  background: linear-gradient(180deg, #9356DC, #FF79DA);
+  background-clip: text;
+  color: transparent;
+}
+.heart__container .heart__checkbox:checked + .heart .heart-filled {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+.heart__container .heart__checkbox:checked + .heart .heart-empty {
+  opacity: 0;
+}
+
 /*# sourceMappingURL=styles.css.map */
