--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -421,11 +421,11 @@ body {
   padding: 10px 0px 0px 25px;
 }
 .footer__contact {
-  color: white;
-}
-.footer__contact p {
   padding: 10px 0px 25px 25px;
-  margin: 0px;
+}
+.footer__contact a {
+  color: white;
+  text-decoration: none;
 }
 
 @keyframes background-loader {
