--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -108,16 +108,10 @@ body{
             flex-direction: column;
             justify-content: center;
             z-index: 0;
+            width: 90%;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
-            }
-            & img{
-                object-fit: cover;
-                height: 176px;
-                width: 370px;
-                border: none;
-                border-radius: 20px 20px 0px 0px;
             }
             &__notif{
                 position: relative;
@@ -130,9 +124,16 @@ body{
                 justify-content: center;
                 align-items: center;
                 box-shadow: 0px 2px 4px 0px $cd-shadow;
-                left: 275px;
-                top: 42px;
+                left: 75%;
+                top: 45px;
             }
+            & img{
+                object-fit: cover;
+                height: 176px;
+                border: none;
+                border-radius: 20px 20px 0px 0px;
+                width: 100%;
+            } 
             &__description{
                 background-color: $cd-background;
                 border-radius: 0px 0px 20px 20px;
@@ -147,10 +148,6 @@ body{
                     left: 310px;
                     bottom: 70px;
                     width: 23px;
-                    
-                    
-                    // width: 22px;
-                    // height: 22px;
                 }
                 &__text h3 {
                     margin: 0px;
@@ -164,6 +161,7 @@ body{
             justify-content: center;
             z-index: 0;
             margin-top: 30px;
+            width: 90%;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
@@ -171,7 +169,7 @@ body{
             & img{
                 object-fit: cover;
                 height: 176px;
-                width: 370px;
+                width: 100%;
                 border: none;
                 border-radius: 20px 20px 0px 0px;
             }
@@ -179,15 +177,14 @@ body{
                 background-color: $cd-background;
                 border-radius: 0px 0px 20px 20px;
                 box-shadow: 0px 4px 15px 0px $cd-shadow--secondary;
-                padding-left: 10px;
                 z-index: 0;
-                height: 85px;
-                width: 360px;
+                height: 80px;
+                width: 100%;
                 &__heart{
                     position: relative;
                     z-index: 1;
-                    left: 310px;
-                    bottom: 70px;
+                    left: 85%;
+                    bottom: 50px;
                     width: 23px;
                     & .fa-heart{
                         font-size: 22px;
@@ -196,7 +193,13 @@ body{
                 &__text h3 {
                     margin: 0px;
                     padding-top: 15px;
+                    padding-left: 10px;
                 }
+                &__text p{
+                    margin: 5px;
+                    padding-left: 10px;
+                }
+                
             }
         }
     }
