Correction petit espace cards accueil + mise en place du mailto sur toute les page html

--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -253,12 +253,12 @@ body {
     font-size: 22px;
   }
   .restaurants__cards__description__text h3 {
-    margin: 0px;
+    margin: -4px 0px 0px 0px;
     padding-top: 15px;
     padding-left: 10px;
   }
   .restaurants__cards__description__text p {
-    margin: 5px;
+    margin: 5px 5px 5px 0px;
     padding-left: 10px;
   }
   .images__menu {
