--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -191,12 +191,12 @@ body{
                     }
                 }
                 &__text h3 {
-                    margin: 0px;
+                    margin: -4px 0px 0px 0px;
                     padding-top: 15px;
                     padding-left: 10px;
                 }
                 &__text p{
-                    margin: 5px;
+                    margin: 5px 5px 5px 0px;
                     padding-left: 10px;
                 }
                 
