--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -331,20 +331,26 @@ body {
     position: relative;
     z-index: 1;
     border-radius: 35px 35px 0px 0px;
-    margin-top: 230px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin: 230px 15% 0px 15%;
+    padding: 0px 128px;
   }
   .container .title {
     padding-top: 40px;
-    margin: 0px 30px 0px 30px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
   }
   .container .title h1 {
     font-size: 28px;
     font-family: "shrikhand", sans-serif;
     font-style: italic;
-    margin: 0px;
+    margin: 0px 35px 0px 0px;
+  }
+  .container .title .enter {
+    width: 100%;
   }
   .container .title .heart {
     display: flex;
