--- a/site_production/sass/header.scss
+++ b/site_production/sass/header.scss
@@ -50,8 +50,60 @@
     }
 }
 
+//Responsive Tablette
+@media (min-width: 769px) and (max-width: 1024px){
+    .logo__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 30px 0px 20px 0px;
+        z-index: 2;
+        position: relative;
+
+    }
+    .header__location{
+        background-color: #EAEAEA;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        position: relative;
+        & .fa-location-dot{
+            margin-right: 10px;
+            color: #353535;
+        }
+
+        
+    }
+    .header__container{
+        & a{
+            text-decoration: none;
+            color: #353535;
+        }
+        & .header__comeback{
+            display: flex;
+            align-items: center;
+            font-size: 17px;
+            position: relative;
+            z-index: 1;
+            top: 25px;
+            left: 30px;
+            width: 15px;
+        }
+        & .header__logo{
+            display: flex;
+            justify-content: center;
+            position: relative;
+            z-index: 0;
+            padding-bottom: 15px;
+        }
+    }
+}
+
 // Responsive Mobile
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
 
     .logo__container {
         display: flex;
