mise en place et ajustement de box shadow sur header

--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -51,6 +51,7 @@
     padding: 30px 0px 20px 0px;
     z-index: 2;
     position: relative;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1490196078);
   }
   .header__location {
     background-color: #EAEAEA;
@@ -61,6 +62,7 @@
     align-items: center;
     z-index: 1;
     position: relative;
+    box-shadow: 0px 4px 10px -5px rgba(0, 0, 0, 0.3647058824);
   }
   .header__location .fa-location-dot {
     margin-right: 10px;
