--- a/site_production/sass/header.scss
+++ b/site_production/sass/header.scss
@@ -59,6 +59,7 @@
         padding: 30px 0px 20px 0px;
         z-index: 2;
         position: relative;
+        box-shadow: 0px 5px 10px 0px #00000026;
 
     }
     .header__location{
@@ -70,6 +71,7 @@
         align-items: center;
         z-index: 1;
         position: relative;
+        box-shadow: 0px 4px 10px -5px #0000005d;
         & .fa-location-dot{
             margin-right: 10px;
             color: #353535;
